Fixed form-footer width on mobile.

--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -47,6 +47,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 20px 15px;
+  width: 90%;
 }
 
 .happy-form-input-button {
